# healthcare-mrf-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPO_CLEANUP_PLAN.md  logging.yaml  main.py  pytest.ini  readability-baseline.json  readability-budget.json  requirements-dev.txt  requirements.txt  setup.cfg  test-coverage-baseline.json  test-coverage.ini
.github/: FUNDING.yml  dependabot.yml
alembic/: env.py
api/: __init__.py  code_systems.py  control.py  control_auth.py  control_imports.py  control_ptg2_v4_stale_metadata.py  control_ptg_v4.py  fields.py  (+66 more)
support/ptg2_scanner/: Cargo.toml  pyproject.toml
support/ptg2_scanner/src/: address_canon.rs  config.rs  contact_canon.rs  copy_format.rs  dedupe.rs  hashing.rs  input.rs  lib.rs  main.rs  manifest.rs  normalize.rs  output.rs  progress.rs  provider_directory_projection.rs  provider_graph_v4.rs  rate_schedule_observe.rs  shared_graph.rs  source_witness.rs  source_witness_spool.rs  uhc_retained.rs  v3.rs  v3_dense.rs  v3_runs.rs
support/ptg2_scanner/src/input/: rapidgzip.rs
support/ptg2_scanner/src/provider_directory_projection_parts/: contracts.rs  decode.rs  encode.rs  stdio.rs  strict_json.rs  tests.rs  validation.rs  wire.rs
support/ptg2_scanner/src/provider_directory_projection_v2/: canonical.rs  contracts.rs  encode.rs  fhir_values.rs  input.rs  mod.rs  pg_copy.rs  references.rs  semantics.rs  stdio.rs  tests.rs
support/ptg2_scanner/src/provider_directory_projection_v2/tests/: contract_tests.rs  encode_coverage_tests.rs  fhir_values_coverage_tests.rs  semantic_edge_tests.rs  semantic_tests.rs  semantics_coverage_tests.rs  support.rs
support/ptg2_scanner/src/uhc_retained_parts/: core.rs  filesystem.rs  json_framing.rs  publication.rs  range_build.rs  retain.rs  tests.rs  verification.rs
support/ptg2_scanner/tests/: compact_v4_cli.rs  input_rapidgzip.rs  input_rapidgzip_failures.rs  provider_directory_projection_cli.rs  provider_directory_projection_copy_cli.rs  provider_graph_v4_cli.rs  raw_claim_check_cli.rs  shared_graph_cli.rs  uhc_retain_cli.rs  v3_sort_surface_coverage.rs  v4_support_coverage.rs
support/ptg2_scanner/tests/fixtures/: compact_v4_mrf.json
(+1362 files in other folders)
