[package]
name = "ptg2_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
serde_json = "1.0"
rayon = "1.10"
struson = { version = "0.7", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
