[package]
name = "ptg2_scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
python-extension = ["python", "pyo3/extension-module"]

[dependencies]
crossbeam-channel = "0.5"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py313"] }
serde_json = "1.0"
rayon = "1.10"
sha2 = "0.11"
struson = { version = "0.7", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
