[package]
name = "ptg2_scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
python-extension = ["python", "pyo3/extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
crossbeam-channel = "0.5"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
itoa = "1.0"
memchr = "2.7"
memmap2 = "0.9"
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py313"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
rayon = "1.10"
sha2 = "0.11"
struson = { version = "0.7", features = ["serde"] }
tempfile = "3.23"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
